# jumpingkids

./: .gitignore  README.md  app_builder.py  app_state.py  main.py  pyproject.toml  test.py  test_views.py  x.py
.devcontainer/: devcontainer.json
application/core/: __init__.py  routines_service_core.py
application/repository/: __init__.py  routines_repository_port.py
application/service/: __init__.py  routines_service_port.py
child_free_app/controller/: controller_builder.py
child_free_app/event/: __init__.py
controller/: __init__.py  routines_view_controller.py
domain/: app.py  model.py
domain/__routing/: view_manager.py
domain/command/: model.py
domain/login/: __init__.py  login_repository_port.py  login_service_core.py  model.py
domain/manager/: controller.py  event.py  repository.py  service.py  view_manager.py
domain/model/: __init__.py  dto.py  model.py
domain/registration/: registration_repository_port.py
domain/routing/: controller.py  module.py  test.py  view_manager.py
domain/subscription/: __init__.py  subscription_repository_port.py  susbcription_service_core.py
event/: __init__.py
hexagon/domain/: model.py
infrastructure/: repository.py
infrastructure/adapter/: __init__.py  login_repository_adapter.py  routines_repository_adapter.py  session_repository_adapter.py  user_repository_adapter.py
infrastructure/child_free_app/: mapper.py  (+1 more)
interface/: event_view.py  service.py  view_event.py
ui/: app_builder.py  app_state.py
user_app_map/: test.py  user_app_map.py  view_manager.py
view/: __init__.py  routines_view.py
(+219 files in other folders)
