[tool.poetry]
name = "jumpingkids"
version = "0.1.0"
description = "Aplicación de Ejercicio para niños"
authors = ["Carlos Alberto Baltazar Hinojosa <97766052+carlos-alberto-code@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.39"
flet = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
